[metadata]
name = pyfomo
version = 0.0.17
description = Fairness oriented Multi-objective Optimization
author = William La Cava
author_email=williamlacava@gmail.com
url=https://github.com/cavalab/fomo
long_description = file: README.md
long_description_content_type= text/markdown
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License 
    Operating System :: OS Independent

[options]
packages = fomo
python_requires = >=3.7
setup_requires = 
    numpy
install_requires =
    pymoo
    scikit-learn
    pandas
    ipdb

[options.extras_require]
docs = 
    sphinx 
    recommonmark 
    seaborn 
    nbsphinx
    matplotlib 
    jupyter
    sphinx-copybutton
    numpydoc
    m2r2
    furo
    sphinx-design
    sphinx-inline-tabs
    myst-parser
    nbsphinx
